# libqsnake

./: CMakeLists.txt  README  README.rst  setup.py  spkg-install
elk/: pb.py  run.py
examples/: baresmallsilicon.in  convert_xyz.py  load_pb_results.py  nist_meshes.py  pb.py  u.py
fortran_test/: CMakeLists.txt
fortran_test/lib/: CMakeLists.txt  test_wrappers.py  wrapper_tests.f90  wrapper_tests.pyx
gamess/: water.inp
gpaw/: CO.py  angle.py  h2_optic.py  h2_optimize.py  na2.py  na2_plot.py  plot.py  silicon_cluster.py  water.py  water_manual.py
mpqc/: README  angle.py  silicon_cluster.in  water.in
phaml/: phaml_simple.py
pyquante/: boron_dft.py  h2_dft.py  h2_hf.py  h2_uhf.py  radon_hf.py  silicon_cluster.py  silicon_cluster_manual.py
qsnake/: CMakeLists.txt  __init__.py  atom.py  atoms.py  cmesh.pyx  fmesh.f90  fmesh.pxd  fmesh_wrapper.f90  fmesh_wrapper.pxd  mesh.py  runtests.py
qsnake/calculators/: __init__.py  abinit.py  gpaw_wrapper.py  pyquante_wrapper.py
qsnake/data/: CMakeLists.txt  __init__.py
qsnake/mesh2d/: CMakeLists.txt  __init__.py  domain.py  mesh.py  plot.py  solution.py  triangulation.py
qsnake/tests/: CMakeLists.txt  test_atom.py  test_elk.py  test_mesh.py  test_phaml.py
